--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
 <div class="card">
     <h1>InsiderIQ Pro</h1>
     <div class="trial-badge">Free 14-Day Trial</div>
-    <p>Join our distribution list to receive daily SEC Form 3 & 4 insider transaction reports directly to your inbox.</p>
+    <p>Join our distribution list to receive daily SEC Form 3 & 4 insider transaction reports in an easy to use csv file.</p>
     
     <form id="signupForm">
-        <input type="text" id="username" name="username" placeholder="Full Name" required>
+        <input type="text" id="username" name="username" placeholder="Username" required>
         <input type="email" id="email" name="email" placeholder="Email Address" required>
         <button type="submit" id="submitBtn">Start Free Trial</button>
     </form>
@@ -37,7 +37,7 @@
 </div>
 
 <script>
-    const scriptURL = 'YOUR_WEB_APP_URL_HERE';
+    const scriptURL = 'https://script.google.com/macros/s/AKfycbyPUjJfYond8IZzmCKwIG0YfRX2K5Y6PGHo9mTythW4A9lottmLO6X-eqa-83D-ccAJ2Q/exec';
     const form = document.getElementById('signupForm');
     const btn = document.getElementById('submitBtn');
     const msg = document.getElementById('message');
