--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
                 <div class="trial-badge" style="background:#e2e8f0; color:#4a5568;">Guide: Using Insider Data</div>
                 <h3>INSIDERIQ PRO’S GUIDE TO GETTING THE MOST OUT OF INSIDER TRANSACTION DATA</h3>
                 <p>We analyzed over 10,000 filings this quarter. Here are buying patterns that stand out.</p>
-                <a href="INSIDERIQ PRO'S GUIDE_ Getting the most out of insider transaction data.pdf" style="color: var(--primary); font-weight: bold; text-decoration: none;">Read More →</a>
+                <a href="INSIDERIQ PRO'S GUIDE_ Getting the most out of insider transaction data (1).pdf" style="color: var(--primary); font-weight: bold; text-decoration: none;">Read More →</a>
             </div>
         </article>
 
